normalized play in all major browsers and fixed title overflow sizing

--- a/src/main/webapp/MontageStyleSheet.css
+++ b/src/main/webapp/MontageStyleSheet.css
@@ -19,6 +19,13 @@ body
     width: 500px;
     height: 300px;*/
 }
+.vidTitle
+{
+   white-space:nowrap;
+   width:100%;
+   overflow:hidden;
+   text-overflow:ellipsis;
+}
 
 reel > a
 {
